--- a/ys/index.html
+++ b/ys/index.html
@@ -12,7 +12,7 @@
             font-family: 'YS Text';
             src: local('YS Text Regular'), local('YSText-Regular'), url('//yastatic.net/s3/home/fonts/ys/1/text-regular.woff2') format('woff2');
             font-weight: normal;
-            font-display: optional;
+            font-display: swap;
         }
 
         * {
@@ -22,6 +22,10 @@
         body.ys * {
             font-family: YS Text;
         }
+
+        body.transparent * {
+            color: rgba(0, 0, 0, 0.5);
+        }
     </style>
 
 </head>
@@ -30,8 +34,8 @@
     <div id="message" style="color: red;"></div>
 
     <button onclick="run()">run</button>
-    <button onclick="ys(true)">ys</button>
-    <button onclick="ys(false)">not ys</button>
+    <button onclick="ys()">ys</button>
+    <button onclick="transparent()">transparent</button>
 
     <div id="text-container">
         II
@@ -147,7 +151,7 @@
 
         const words = textContainer.textContent.split(' ');
 
-        for (let i = 0; i < 1000; i++) {
+        for (let i = 0; i < 10000; i++) {
             texts.push(_.shuffle(words).join(' '));
         }
 
@@ -163,17 +167,15 @@
             message.textContent = endTime - startTime;
         }
 
-        function ys(on) {
-            if (on) {
-                document.body.classList.add('ys');
-            } else {
-                document.body.classList.remove('ys');
-            }
+        function ys() {
+            document.body.classList.toggle('ys');
         }
 
-        window.onerror = function (error) {
-            message.textContent = error;
+        function transparent() {
+            document.body.classList.toggle('transparent');
         }
+
+
     </script>
 </body>
 
