--- a/ys/index.html
+++ b/ys/index.html
@@ -10,17 +10,19 @@
     <style>
         @font-face {
             font-family: 'YS Text';
-            src: local('YS Text Regular'), local('YSText-Regular'), url('//yastatic.net/s3/home/fonts/ys/1/text-regular.woff2') format('woff2');
-            font-weight: normal;
+            src: url('https://yastatic.net/s3/home/fonts/ys/3/text-variable-full.woff2') format('woff2-variations');
+            /* stylelint-disable-next-line font-weight-notation */
+            font-weight: 400 700;
             font-display: swap;
         }
 
         * {
-            font-family: sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Roboto, 'Segoe UI', Arial, Helvetica, 'Arial Unicode MS', sans-serif;
         }
 
         body.ys * {
-            font-family: YS Text;
+            letter-spacing: 0.012em;
+            font-family: 'YS Text', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Roboto, 'Segoe UI', Arial, Helvetica, sans-serif;
         }
 
         body.transparent * {
@@ -151,7 +153,7 @@
 
         const words = textContainer.textContent.split(' ');
 
-        for (let i = 0; i < 10000; i++) {
+        for (let i = 0; i < 1000; i++) {
             texts.push(_.shuffle(words).join(' '));
         }
 
