--- a/ys/ys.html
+++ b/ys/ys.html
@@ -56,7 +56,7 @@
     </script>
 </head>
 
-<body>
+<body class="ys">
     <pre id="message" style="color: red;"></pre>
 
     <p class="text-container" elementtiming='text-container'>
