--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <script>
     var container = document.querySelector("#unity-container");
-    container.innerText = document.write(navigator.userAgent);
+    container.innerText = navigator.userAgent;
   </script>
 </body>
 
